# wxctl

./: .gitignore  README.md  pyproject.toml
configs/: app.yaml
docs/adr/: 0001-local-cybernetic-architecture.md
docs/plans/: 2026-05-21-wxctl-implementation-plan.md
src/wxctl/: cli.py  config.py
src/wxctl/adapters/: sqlite_source.py  wechat_fs.py
src/wxctl/decoders/: appmsg.py  base.py  emoji.py  image.py  registry.py  system.py  text.py  video.py  voice.py  voip.py
src/wxctl/resolvers/: asset_resolver.py  sender_resolver.py  target_resolver.py
src/wxctl/services/: capture_key.py  decrypt.py  doctor.py  dump.py  preview.py  sync.py
src/wxctl/store/: engine.py  schema.sql
tests/golden/: README.md  emoji_msg.xml  file_share_msg.xml  image_msg.xml  location_msg.xml  mini_program_msg.xml  quote_reply_msg.xml  share_card_msg.xml  system_revoke_msg.xml  video_msg.xml  voice_msg.xml  voip_msg.xml
tests/integration/: test_sync_loop.py
tests/unit/: conftest.py  test_cli.py  test_config.py  test_decoders.py  test_dump_merge.py  test_preview.py  test_registry.py  test_target_resolver.py  test_wechat_fs.py
